Tweeter - from Api to DB and Back with nice view

--- a/TwitterBackup.Web/Views/Shared/_SearchBar.cshtml
+++ b/TwitterBackup.Web/Views/Shared/_SearchBar.cshtml
@@ -1,4 +1,6 @@
-﻿@using TwitterBackup.Models
+﻿@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Mvc.Routing
+@using TwitterBackup.Models
 
 @if (this.User.Identity.IsAuthenticated)
 {
