--- a/TwitterBackup.Web/Views/Tweeters/Remove.cshtml
+++ b/TwitterBackup.Web/Views/Tweeters/Remove.cshtml
@@ -1,23 +1,23 @@
 ﻿@model TwitterBackup.Web.Models.TweeterViewModels.TweeterViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remove";
 }
 
-<h3 position="center">Are you sure you want to delete this tweet?</h3>
+<h3 position="center">Are you sure you want to remove this tweeter?</h3>
 <div>
 
-    <dl class="dl-horizontal">
-        @if ((bool)@ViewData["IsAdmin"])
-    {
+    @*<dl class="dl-horizontal">
+        @if (Model.IsAdmin)
+        {
 
-        <dt>
-            @Html.DisplayNameFor(model => model.UserName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.UserName)
-        </dd>
-}
+            <dt>
+                @Html.DisplayNameFor(model => model.UserName)
+            </dt>
+            <dd>
+                @Html.DisplayFor(model => model.UserName)
+            </dd>
+        }
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -30,10 +30,11 @@
         <dd>
             @Html.DisplayFor(model => model.ScreenName)
         </dd>
-    </dl>
+    </dl>*@
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="UserName" asp />
+    <form asp-action="Remove">
+        <input type="hidden" asp-for="UserName" />
+        <input type="hidden" asp-for="@ViewData["returnUrl"]" name="returnUrl" />
         <input type="hidden" asp-for="TweeterId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
