--- a/TwitterBackup.Web/Views/Tweets/Remove.cshtml
+++ b/TwitterBackup.Web/Views/Tweets/Remove.cshtml
@@ -1,16 +1,14 @@
 ﻿@model TwitterBackup.Web.Models.TweetViewModels.TweetViewModel
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Remove";
 }
 
-<h3 position="center">Are you sure you want to delete this tweet?</h3>
+<h3 position="center">Are you sure you want to remove this tweet?</h3>
 <div>
-
-    <dl class="dl-horizontal">
+<dl class="dl-horizontal">
         @if ((bool)@ViewData["IsAdmin"])
         {
-
             <dt>
                 @Html.DisplayNameFor(model => model.UserName)
             </dt>
@@ -62,8 +60,8 @@
         </dd>
     </dl>
 
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="UserName" asp />
+    <form asp-action="Remove">
+        <input type="hidden" asp-for="UserName" />
         <input type="hidden" asp-for="TweetId" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
